# maomao

./: .gitignore  Cargo.toml  README.md  foo.yaml
.github/workflows/: clippy.yml  release.yml  rust.yml
ci/: app.yaml
docs/: cmd.md  crd.md  index.md  templates.md  variables.md
examples/: _vars.toml  daemonset.toml  deployment.toml  deployment_affinity.toml  ingress.toml  map.toml  pod.toml  secret.toml  service.toml  statefulset.toml
examples/crd/: _vars.toml  argo-workflow.toml  basis.toml  mcrt.toml
examples/diff/: _vars.toml  deployment.toml  service.toml
examples/dry/: deployment.toml
examples/node/: maomao.dev.toml  maomao.staging.toml
examples/node/templates/: deployment.toml  probes.toml  service.toml
src/: cli.yaml  lib.rs  main.rs
src/cli/: mod.rs
src/cli/diff/: mod.rs
src/cli/dry/: mod.rs
src/cli/generate/: mod.rs
src/cli/helper/: error.rs  io.rs  logger.rs  mod.rs
src/helper/: err.rs
src/io/: read.rs
src/kube/: mod.rs
src/kube/common/: error.rs  mod.rs
src/kube/crd/: mod.rs
src/kube/diff/: mod.rs
src/kube/dry/: mod.rs  util.rs
src/kube/env/: mod.rs
src/kube/helper/: error.rs  mod.rs
src/kube/network/: mod.rs
src/kube/workload/: daemonset.rs  deployment.rs  mod.rs  pod.rs  statefulset.rs
src/kubernetes/: controller.rs  mod.rs  network.rs
src/lib/: mod.rs
src/lib/helper/: conv.rs  error.rs  mod.rs  toml.rs
src/lib/parser/: mod.rs  spec.rs
src/lib/vars/: mod.rs  util.rs
src/parser/: conv.rs  mod.rs  template.rs  util.rs  worker.rs
src/parser/kubernetes/: mod.rs
tests/: cli.rs
(+36 files in other folders)
