[package]
name = "maomao"
version = "0.1.0"
authors = ["shigedangao <marc.inthaamnouay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde_yaml = "0.8.15"
kube-runtime = "0.51.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }